--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
         </main>
         <footer>
             <p>Copyright © 2020 JavaJam Coffee Bar</p>
-            <p><a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a></p>
+            <p><a href="mailto:tejas@shekhada.com">tejas@shekhada.com</a></p>
         </footer>
     </div>
 </body>
