--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
             </p>
         </main>
         <footer>
-            <p>Copyright © 2020 JavaJam Coffee Bar</p>
-            <p><a href="mailto:tejas@shekhada.com">tejas@shekhada.com</a></p>
-        </footer>
+    <p>Copyright © 2020 JavaJam Coffee Bar</p>
+    <p><a href="mailto:tejas@shekhada.com">tejas@shekhada.com</a></p>
+    <div id="lastModified"></div>
+    <script>
+        document.getElementById("lastModified").innerHTML = "This page was last modified on: " + document.lastModified;
+    </script>
+</footer>
     </div>
 </body>
 </html>
