--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,9 @@
         <main>
             <div id="heromugs"></div>
             <h2>Coffee at JavaJam</h2>
-            <p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you purchase — ask the barista for details.</p>
+           <p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! 
+Join our <a href="#" onmouseover="alert('JavaJam Mug Club Members get a 10% discount on each cup of coffee!');">Mug Club</a> 
+and get a 10% discount on each cup of coffee you purchase — ask the barista for details.</p>
 
             <table>
                 <tr>
